# desktop

./: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.js
.github/workflows/: create-release.yml  publish-release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: encryption.rs  hashing.rs  mod.rs  offline_mode.rs  srp.rs  srp_group.rs  srp_utils.rs
src-tauri/src/utils/: mod.rs  srp_group.rs  srp_utils.rs  utils.rs
src/lib/: types.ts  utils.ts
src/lib/assets/: mPass.svelte  mPassLoader.svelte
src/lib/assets/icons/: apple.svelte  linux.svelte  windows.svelte
src/lib/auth/: createUser.svelte.ts  getMe.svelte.ts  login.svelte.ts
src/lib/components/layout/: macosTitlebar.svelte  updateDialog.svelte
src/lib/layout/admin/: smtpSettings.svelte  usersList.svelte
src/lib/layout/generator/: history.svelte
src/lib/layout/import-export/: export.svelte
src/lib/layout/my-account/: dangerZone.svelte  emailVerificationDialog.svelte  personalInfo.svelte  updateData.svelte  updateEmail.svelte
src/lib/layout/passwords/: main.svelte  newPasswordDialog.svelte  passwordsList.svelte  search.svelte  selectedPassword.svelte
src/lib/layout/root/: decorations.svelte  login.svelte  offlineLogin.svelte  registration.svelte  serverValidation.svelte  updateDialog.svelte
src/lib/layout/settings/: animations.svelte  decorations.svelte  osInfo.svelte  sessionLength.svelte  theme.svelte
src/lib/modules/admin/: admin.service.svelte.ts  admin.state.svelte.ts  admin.types.svelte.ts
src/lib/modules/auth/: auth.service.svelte.ts  auth.state.svelte.ts  auth.types.svelte.ts
src/lib/modules/export/: export.service.svelte.ts  export.state.svelte.ts
src/lib/modules/generator/: generator.service.svelte.ts  generator.state.svelte.ts  generator.types.svelte.ts
src/lib/modules/http/: http.service.svelte.ts  http.types.svelte.ts
src/lib/modules/import/: import.service.svelte.ts  import.state.svelte.ts
src/lib/modules/loaders/: loaders.state.svelte.ts
src/lib/modules/notifications/: notifications.service.svelte.ts  notifications.state.svelte.ts
src/lib/modules/offlineMode/: offlineMode.service.svelte.ts  offlineMode.types.svelte.ts
src/lib/modules/passwords/: passwords.service.svelte.ts  passwords.state.svelte.ts  passwords.types.svelte.ts
src/lib/modules/preferences/: preferences.service.svelte.ts  preferences.state.svelte.ts
src/lib/modules/server/: server.service.svelte.ts  (+1 more)
src/lib/offlineMode/: offlineMode.svelte.ts
src/lib/services/: admin.svelte.ts  auth.svelte.ts  autoUpdate.svelte.ts  export.svelte.ts  loaders.svelte.ts  newPassword.svelte.ts  passwordGenerator.svelte.ts  passwords.svelte.ts  preferences.svelte.ts
src/lib/state/: auth.svelte.ts  autoUpdate.svelte.ts  loaders.svelte.ts  newPassword.svelte.ts  osInfo.svelte.ts  passwords.svelte.ts  preferences.svelte.ts  server.svelte.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/dashboard/: +layout.svelte
(+89 files in other folders)
